# cross-platform-rust-http-request

./: readme.md
android/app/: readme.md
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/android/: MainActivity.kt
ios/ios/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios/ios.xcodeproj/: project.pbxproj
ios/ios.xcodeproj/project.xcworkspace/xcuserdata/logan.xcuserdatad/: UserInterfaceState.xcuserstate
ios/ios.xcodeproj/xcuserdata/logan.xcuserdatad/xcschemes/: ios.xcscheme
nodejs/: README.md
nodejs/lib/: index.js
nodejs/native/src/: lib.rs
rust-android/: readme.md
rust-android/src/: lib.rs
rust-core/: Cargo.toml  readme.md
rust-core/src/: lib.rs
rust-ios/: readme.md
rust-ios/src/: lib.rs
scripts/: build-android.sh
