[package]
name = "rust-core"
version = "0.1.0"
authors = ["Logan Keenan <d.logankeenan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls", "blocking"] }
